crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__qualified_type_name.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"std::complex64\", parse_type)"
---
TypeName "std::complex64"
