crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__return_with_and_without_value.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"return; return x + 1;\")"
---
ReturnStmt
