crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__slice_type_has_no_size.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_type(\"int[]\")"
---
Array
  TypeName "int"
