crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__subtraction_is_left_associative.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"1 - 2 - 3;\", Parser::parse_statement)"
---
ExprStmt
  Binary "-"
    Binary "-"
      1
      2
    3
