crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__ternary_binds_looser_than_logical_or.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"a || b ? c : d;\", Parser::parse_statement)"
---
ExprStmt
  Ternary
    Binary "||"
      a
      b
    c
    d
