crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__ternary_nests_to_the_right.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"a ? b : c ? d : e;\", Parser::parse_statement)"
---
ExprStmt
  Ternary
    a
    b
    Ternary
      c
      d
      e
