crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__typed_var_decl_statements.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"wrap<5> w; clamp<5> c; int n = 1;\")"
---
VarDeclStmt "w"
  ChevronSuffix
    TypeName "wrap"
    5
