crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__unary_and_parens.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_expr(\"-(1 + 2)\")"
---
Unary "-"
  Paren
    Binary "+"
      1
      2
