crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__unbounded_loop_has_no_count.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"loop { advance(); }\")"
---
LoopStmt
  Block
    ExprStmt
      Call
        advance
