crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__var_statement.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"var y;\")"
---
VarStmt "y"
