crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__var_with_init_statement.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"var y = 3;\", Parser::parse_statement)"
---
VarStmt "y"
  3
