crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__vector_type.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"int<4>\", parse_type)"
---
ChevronSuffix
  TypeName "int"
  4
